--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-API de calendário que guarda uma data e possui métodos de manipulação desta data.
+API de data que guarda uma data e possui métodos de manipulação desta data.
